# uniset2-cmake

./: .gitignore  CMakeLists.txt
IDL/: CMakeLists.txt
IDL/Processes/: CMakeLists.txt
IDL/UniSetTypes/: CMakeLists.txt  UniSetBaseConstants.idl
Utilities/: CMakeLists.txt
Utilities/Admin/: CMakeLists.txt
Utilities/MBTester/: CMakeLists.txt  MBSlave.cc  MBTCPServer.cc
Utilities/NullController/: CMakeLists.txt
Utilities/SImitator/: CMakeLists.txt
Utilities/SMonit/: CMakeLists.txt
Utilities/SViewer-text/: CMakeLists.txt
Utilities/ULog/: CMakeLists.txt
Utilities/codegen/: CMakeLists.txt
cmake/: packaging.cmake  utils.cmake
contrib/: CMakeLists.txt
contrib/cityhash102/: CMakeLists.txt
contrib/murmurhash/: CMakeLists.txt
extensions/: CMakeLists.txt
extensions/Backend-ClickHouse/: BackendClickHouse.h  CMakeLists.txt  ClickHouseInterface.h
extensions/Backend-OpenTSDB/: BackendOpenTSDB.h  CMakeLists.txt
extensions/DBServer-MySQL/: CMakeLists.txt
extensions/DBServer-PostgreSQL/: CMakeLists.txt
extensions/DBServer-SQLite/: CMakeLists.txt
extensions/HttpResolver/: CMakeLists.txt
extensions/IOControl/: CMakeLists.txt
extensions/LogDB/: CMakeLists.txt
extensions/LogicProcessor/: CMakeLists.txt
extensions/MQTTPublisher/: CMakeLists.txt  MQTTPublisher.h
extensions/ModbusMaster/: CMakeLists.txt  MBConfig.cc  MBExchange.cc  MBTCPMaster.cc  MBTCPMultiMaster.cc  mtr-setup.cc
extensions/ModbusSlave/: CMakeLists.txt
extensions/OPCUAExchange/: CMakeLists.txt
extensions/OPCUAServer/: CMakeLists.txt
extensions/RRDServer/: CMakeLists.txt  RRDServer.h
extensions/SMViewer/: CMakeLists.txt
extensions/SharedMemory/: CMakeLists.txt
extensions/UNetUDP/: CMakeLists.txt
extensions/UWebSocketGate/: CMakeLists.txt
extensions/UniNetwork/: CMakeLists.txt
extensions/lib/: CMakeLists.txt
extensions/tests/: CMakeLists.txt
extensions/tests/MBSlaveTest/: CMakeLists.txt
extensions/tests/MQPerfTest/: CMakeLists.txt
extensions/tests/SMemoryTest/: CMakeLists.txt
lib/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt
src/Communications/: CMakeLists.txt
src/Communications/Http/: CMakeLists.txt
src/Communications/Modbus/: CMakeLists.txt
src/Communications/TCP/: CMakeLists.txt
src/Core/: CMakeLists.txt
src/Log/: CMakeLists.txt
src/ObjectRepository/: CMakeLists.txt  ORepHelpers.cc
src/Processes/: CMakeLists.txt
src/Services/: CMakeLists.txt
src/Test/: CMakeLists.txt  main.cpp
src/Timers/: CMakeLists.txt
src/Various/: CMakeLists.txt
