add_subdirectory(lib)
add_subdirectory(SharedMemory)
add_subdirectory(IOControl)  
add_subdirectory(LogicProcessor)
add_subdirectory(ModbusMaster)
add_subdirectory(ModbusSlave)
add_subdirectory(SMViewer)
add_subdirectory(UniNetwork)
add_subdirectory(UNetUDP)
add_subdirectory(DBServer-MySQL)
add_subdirectory(DBServer-SQLite)
add_subdirectory(DBServer-PostgreSQL)
# add_subdirectory(MQTTPublisher)
# add_subdirectory(RRDServer)
# add_subdirectory(tests)
# add_subdirectory(LogDB)
# add_subdirectory(Backend-OpenTSDB)
# add_subdirectory(Backend-ClickHouse)
# add_subdirectory(HttpResolver)
# add_subdirectory(UWebSocketGate) 
# add_subdirectory(OPCUAServer)
# add_subdirectory(OPCUAExchange) 
